--- a/flink-ml-lib/pom.xml
+++ b/flink-ml-lib/pom.xml
@@ -102,6 +102,11 @@ under the License.
       <type>jar</type>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>com.google.code.gson</groupId>
+          <artifactId>gson</artifactId>
+          <version>2.8.6</version>
+      </dependency>
   </dependencies>
 
 </project>
