--- a/flink-ml-lib/pom.xml
+++ b/flink-ml-lib/pom.xml
@@ -106,6 +106,11 @@ under the License.
       <type>jar</type>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>dev.ludovic.netlib</groupId>
+      <artifactId>blas</artifactId>
+      <version>2.2.1</version>
+    </dependency>
   </dependencies>
 
 </project>
