--- a/flink-ml-core/pom.xml
+++ b/flink-ml-core/pom.xml
@@ -66,6 +66,13 @@ under the License.
     </dependency>
 
     <dependency>
+      <groupId>dev.ludovic.netlib</groupId>
+      <artifactId>lapack</artifactId>
+      <version>2.2.1</version>
+      <scope>compile</scope>
+    </dependency>
+
+    <dependency>
       <groupId>org.apache.flink</groupId>
       <artifactId>flink-table-api-java-bridge</artifactId>
       <version>${flink.version}</version>
