--- a/flink-ml-servable-core/pom.xml
+++ b/flink-ml-servable-core/pom.xml
@@ -59,6 +59,13 @@ under the License.
     </dependency>
 
     <dependency>
+      <groupId>dev.ludovic.netlib</groupId>
+      <artifactId>lapack</artifactId>
+      <version>2.2.1</version>
+      <scope>compile</scope>
+    </dependency>
+
+    <dependency>
       <groupId>org.apache.flink</groupId>
       <artifactId>flink-test-utils</artifactId>
       <version>${flink.version}</version>
