--- a/flink-ml-core/pom.xml
+++ b/flink-ml-core/pom.xml
@@ -159,6 +159,12 @@ under the License.
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-annotations</artifactId>
     </dependency>
+      <dependency>
+          <groupId>org.apache.flink</groupId>
+          <artifactId>flink-statebackend-rocksdb</artifactId>
+          <version>1.15.1</version>
+          <scope>test</scope>
+      </dependency>
   </dependencies>
 
   <build>
